--- a/css/responsive.css
+++ b/css/responsive.css
@@ -120,6 +120,9 @@
     width: 100%;
     margin-top: 5px;
   }
+  .website-view:after {
+    display: none;
+  }
   .website-view a {
     font-size: 26px;
     margin: 0 5px;
